# bookmark-context

./: .coverage  .gitignore  README.md  mcp_debug.py  pyproject.toml
bookmark_context/: cli.py  config.py  favicon.py  rag.py
bookmark_context/ai/: base.py  claude.py  ollama.py
bookmark_context/api/: app.py  bookmarks.py  collections.py  schemas.py
bookmark_context/indexer/: chunker.py  embedder.py  pipeline.py  scanner.py  scraper.py
bookmark_context/mcp/: server.py
bookmark_context/storage/: database.py  vector_store.py
docs/superpowers/plans/: 2026-05-15-daemon-mcp.md  2026-05-15-extension.md  2026-05-16-architecture.md  2026-05-16-bugs.md  2026-05-16-code-quality.md  2026-05-16-security.md  2026-05-17-collection-management.md  2026-05-17-react-vite-shadcn-migration.md  (+2 more)
extension/: components.json  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
extension/background/: service_worker.js
extension/content/: content_script.js
extension/options/: options.html  options.js
extension/shared/: api.js  capturePage.js
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
extension/src/: api.test.ts  api.ts  test-setup.ts  types.ts
tests/: test_config.py  test_favicon.py  test_rag.py
tests/ai/: test_adapters.py
tests/api/: test_bookmarks.py  test_collections.py  test_status.py
tests/indexer/: test_chunker.py  test_embedder.py  test_pipeline.py  test_scanner.py  test_scraper.py
tests/mcp/: test_server.py
tests/storage/: test_database.py  test_vector_store.py
(+78 files in other folders)
