[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-context"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "trafilatura>=1.9",
    "fastembed>=0.3",
    "chromadb>=0.5",
    "mcp>=1.0",
    "pydantic>=2.7",
]

[project.scripts]
bookmark-context = "bookmark_context.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # AsyncClient for tests
    "respx>=0.21",  # mock httpx
]

[tool.setuptools.packages.find]
include = ["bookmark_context*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
